Fixed code cards with long lines from being too wide
no issue

Credit to https://github.com/mvasilkov for the fix -  https://github.com/TryGhost/Casper/pull/602

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1942,7 +1942,7 @@ Usage (In Ghost editor):
 
 /* keep existing <pre> styles for code cards with captions */
 .kg-code-card {
-    min-width: 100%;
+    width: 100%;
 }
 
 .kg-code-card pre {
